--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.18",
+    "jquery": "^3.4.1",
     "netlify-cms-app": "^2.9.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.14",
